feat : order jdbc repo test 코드 작성